2006-08-25 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* test/shell.c:
	* src/gqueue.c: plugged leaks.

2006-08-25 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* test/path.c:
	* src/gpath.c: when PATH is not defined, the current dir is used.
	See execvp(3).

2006-08-25  Alp Toker  <alp@atoker.com>

	* src/gstr.c: g_strv_length() should return guint, not gint
	* src/glib.h: Add g_strv_length() prototype
	
2006-08-24  Miguel de Icaza  <miguel@novell.com>

	* src/gpath.c (g_get_home_dir, g_get_tmp_dir, g_get_user_name,
	g_get_prgname, g_set_prgname): implemented.

	* test/ Fix leaks.
	
	* src/gpath.c (g_get_current_dir): Implement.

	(g_find_program_in_path, g_path_is_absolute): implement.
	
	Add g_path_get_dirname, g_path_get_basename

	* src/gpath.c: Path routines

2006-08-23  Miguel de Icaza  <miguel@novell.com>

	* src/gerror.c: Implement. 

	* src/glist.c (g_list_sort): Remove routine instead of hoping that
	it wont crash when we run it.

2006-08-23  Raja R Harinath  <rharinath@novell.com>

	* src/glist.c (g_list_insert_before): Avoid non-head declaration.

	* test/slist.c (test_slist_insert_before): Add.
	* src/gslist.c (g_slist_insert_before): Append if 'sibling' is null.

	* test/list.c (test_list_insert_before): Add test for return value
	of g_list_insert_before.
	* test/Makefile.am (test_eglib_LDADD): Refer to the .la file so as
	to rebuild test if eglib changes.
	* src/glist.c (new_node, disconnect_node): New helpers that
	maintain doubly-linked list invariants.
	(g_list_prepend, g_list_append): Express in terms of new_node.
	(g_list_insert_before): Likewise.  Fix return value when inserting
	in the middle of the list.
	(g_list_concat): Reorganize to make more compact.
	(g_list_nth): Likewise.
	(g_list_nth_data): Don't segfault if 'n' is too large.
	(g_list_remove): Rewrite using _find and disconnect_node.
	(g_list_remove_link): Don't traverse list: use disconnect_node.
	(g_list_insert_sorted): Rewrite to make more compact.  Use new_node.